--- a/css/styles.css
+++ b/css/styles.css
@@ -38,24 +38,17 @@ html {
     we set font size of the root element (HTML) to 10px then 1rem = 10px
     */
 }
+
 body {
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
 }
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-}
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  gap: 9.6rem;
-}
+
+/*********************************/
+/* GENERAL REUSEABLE COMPONENTS */
+/********************************/
 
 .heading-primary {
   font-size: 5.2rem;
@@ -64,12 +57,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.5;
-  margin-bottom: 4.8rem;
 }
 
 .btn:link,
@@ -111,38 +98,80 @@ body {
   margin-right: 1.6rem !important;
 }
 
-.delivered-meals{
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
-    margin-top: 8rem;
+/************************/
+/* HEADER */
+/************************/
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  /* to make sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
 }
 
-.delivered-imgs{
-    display: flex;
+.logo{
+  height: 2.2rem;
 }
 
-.delivered-imgs img{
-    height: 4.8rem;
-    width: 4.8rem;
-    border-radius: 50%;
-    margin-right: -1.6rem;
-    border: 3px solid #fdf2e9;
+/************************/
+/* HERO SECTION */
+/************************/
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
-.delivered-imgs img:last-child{
-    margin-right: 0;
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
 }
 
-
-.delivered-text{
-    font-size: 1.8rem;
-    font-weight: 600;
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.5;
+  margin-bottom: 4.8rem;
 }
 
-.delivered-text span{
-    color: #cf711f;
-    font-weight: 700;
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  margin-top: 8rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
 .hero-img {
   width: 100%;
