--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,16 @@
 --- 01 TYPOGRAPHY SYSTEM
 
     - font size (px) : 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-    - font weights :
-    - default: 400
+    - font weights : 
+      - default: 400
+      - medium: 500
+      - semi-bold:600
+      - bold:700
+
     - line heights :
     - default: 1
+    - small: 1.05
+    - paragraph-default: 1.6
 
 --- 02 COLORS
 
@@ -18,6 +24,7 @@
 --- 05 SHADOWS
 
 --- 06 BORDER RADIUS
+  - default:9px
 
 --- 07 WHITESPACE
     - spacing system (px) : 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
@@ -65,7 +72,7 @@ body {
   font-size: 2rem;
   padding: 1.6rem 3.2rem;
   text-decoration: none;
-  border-radius: 1.5rem;
+  border-radius: 9px;
   font-weight: 600;
   transition: all 0.3s ease-in-out;
 }
@@ -102,7 +109,7 @@ body {
 /* HEADER */
 /************************/
 
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -113,8 +120,46 @@ body {
   padding: 0 4.8rem;
 }
 
-.logo{
+.logo {
   height: 2.2rem;
+}
+/************************/
+/* NAVIGATION */
+/************************/
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:active,
+.main-nav-link.nav-cta:hover {
+  background-color: #cf711f;
 }
 
 /************************/
