--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,25 @@ body {
 /* GENERAL REUSEABLE COMPONENTS */
 /********************************/
 
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -221,3 +240,13 @@ body {
 .hero-img {
   width: 100%;
 }
+
+/************************/
+/* HOW IT WORK SECTION */
+/************************/
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
+}
+
