--- a/css/styles.css
+++ b/css/styles.css
@@ -22,12 +22,15 @@
     - grays : #555, #333
 
 --- 05 SHADOWS
+--- 06 LETTER SPACING: -0.5px, 0.75px
 
 --- 06 BORDER RADIUS
   - default:9px
 
 --- 07 WHITESPACE
     - spacing system (px) : 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+  
 */
 
 * {
@@ -76,13 +79,33 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.heading-primary {
-  font-size: 5.2rem;
+.heading-primary,
+.heading-secondery {
   font-weight: 700;
-  line-height: 1.05;
   color: #333;
   letter-spacing: -0.5px;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
   margin-bottom: 3.2rem;
+}
+
+.heading-secondery {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: .75px;
 }
 
 .btn:link,
@@ -247,6 +270,8 @@ body {
 
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
 }
 
+.step-img {
+  width: 50%;
+}
