--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,3 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
-
-    - font size (px) : 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-    - font weights : 
-      - default: 400
-      - medium: 500
-      - semi-bold:600
-      - bold:700
-
-    - line heights :
-    - default: 1
-    - small: 1.05
-    - paragraph-default: 1.6
-
---- 02 COLORS
-
-    - primary : #e67e22
-    - tints :#fdf2e9,
-    - shades :#cf711f
-    - accents :
-    - grays : #555, #333
-
---- 05 SHADOWS
---- 06 LETTER SPACING: -0.5px, 0.75px
-
---- 06 BORDER RADIUS
-  - default:9px
-
---- 07 WHITESPACE
-    - spacing system (px) : 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-  
-*/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  /* percentage of user's browser font-size setting*/
-  font-size: 62.5%;
-  /*
-    rem => root element font size : rem is used as a unit of responsive design 
-    default : 1rem = 16px
-    we set font size of the root element (HTML) to 10px then 1rem = 10px
-    */
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/*********************************/
-/* GENERAL REUSEABLE COMPONENTS */
-/********************************/
-
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.heading-primary,
-.heading-secondery {
-  font-weight: 700;
-  color: #333;
-  letter-spacing: -0.5px;
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.05;
-  margin-bottom: 3.2rem;
-}
-
-.heading-secondery {
-  font-size: 4.4rem;
-  line-height: 1.2;
-  margin-bottom: 9.6rem;
-}
-
-.subheading {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: #cf711f;
-  text-transform: uppercase;
-  margin-bottom: 1.6rem;
-  letter-spacing: .75px;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  text-decoration: none;
-  border-radius: 9px;
-  font-weight: 600;
-  transition: all 0.3s ease-in-out;
-}
-
-.btn--fill:link,
-.btn--fill:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--fill:hover,
-.btn--fill:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  /*trick to add border inside*/
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /************************/
 /* HEADER */
 /************************/
@@ -272,6 +123,51 @@ body {
   padding: 9.6rem 0;
 }
 
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* 60 from parent's width */
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
 .step-img {
-  width: 50%;
+  width: 35%;
 }
