--- a/css/styles.css
+++ b/css/styles.css
@@ -119,26 +119,26 @@
 /* FEATURED IN SECTION */
 /************************/
 
-.section-featured{
+.section-featured {
   padding: 4.8rem 0 3.2rem 0;
 }
 
-.heading-featured-in{
+.heading-featured-in {
   font-size: 1.4rem;
   text-transform: uppercase;
-  letter-spacing: .75px;
+  letter-spacing: 0.75px;
   font-weight: 500;
   text-align: center;
   margin-bottom: 2.4rem;
   color: #888;
 }
 
-.logos{
+.logos {
   display: flex;
   justify-content: space-around;
 }
 
-.logos img{
+.logos img {
   height: 3.2rem;
   filter: brightness(0);
   opacity: 50%;
@@ -199,4 +199,34 @@
 
 .step-img {
   width: 35%;
+}
+
+/************************/
+/* MEALS SECTION */
+/************************/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 2rem;
+}
+
+.meal-img {
+  width: 100%;
 }
