--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,16 @@
   padding: 9.6rem 0;
 }
 
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 1.1rem;
+  overflow: hidden;
+}
+
+.meal-content {
+  padding: 4.8rem;
+  padding-top: 3.2rem;
+}
 .meal-title {
   font-size: 2.4rem;
   color: #333;
@@ -216,6 +226,32 @@
   margin-bottom: 3.2rem;
 }
 
+.meal-tags {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: .4rem;
+}
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #333;
+  border-radius: 10rem;
+}
+
+.tag--vegetarian {
+  background-color: #51cf66;
+}
+
+.tag--vegan {
+  background-color: #94d82d;
+}
+
+.tag--paleo {
+  background-color: #ffd43b;
+}
 .meal-attributes {
   list-style: none;
   display: flex;
@@ -225,6 +261,15 @@
 
 .meal-attribute {
   font-size: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #e67e22;
 }
 
 .meal-img {
