--- a/css/general.css
+++ b/css/general.css
@@ -21,7 +21,7 @@
             #fae5d3
     - shades :#cf711f
     - accents : #51cf66
-    - grays : #555, #333
+    - grays : #555, #333, #6F6F6F
 
 --- 05 SHADOWS
 --- 06 LETTER SPACING: -0.5px, 0.75px
