--- a/css/styles.css
+++ b/css/styles.css
@@ -287,8 +287,6 @@
   font-size: 1.8rem;
 }
 
-
-
 /************************/
 /* TESTIMONIALS SECTION */
 /************************/
@@ -325,7 +323,7 @@
 
 .testimonial-name {
   font-size: 1.6rem;
-  color: #6F6F6F;
+  color: #6f6f6f;
 }
 
 .gallery {
@@ -342,10 +340,10 @@
 .gallery-item img {
   display: block;
   width: 100%;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
-.gallery-item img:hover{
+.gallery-item img:hover {
   transform: scale(1.1);
 }
 
@@ -357,11 +355,45 @@
   padding: 9.6rem 0;
 }
 
-.plan-header{
+.pricing-plan {
+  border-radius: 1.1rem;
+  padding: 4.8rem;
+  width: 75%;
+}
+
+.pricing-plan--stater {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  position: relative;
+  justify-self: start;
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "Best value";
+  position: absolute;
+  top: 6%;
+  right: -18%;
+  transform: rotate(45deg);
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #333;
+  background-color: #ffd43b;
+  padding: .8rem 8rem;
+}
+
+.plan-header {
   text-align: center;
   margin-bottom: 4.8rem;
 }
-.plan-name{
+.plan-name {
   color: #cf711f;
   font-weight: 600;
   font-size: 2rem;
@@ -370,26 +402,26 @@
   margin-bottom: 3.2rem;
 }
 
-.plan-price{
+.plan-price {
   font-size: 6.2rem;
   font-weight: 600;
   color: #333;
   margin-bottom: 1.6rem;
 }
 
-.plan-price span{
-font-size: 3rem;
-font-weight: 500;
-margin-right: 0.8rem;
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
 }
 
-.plan-text{
+.plan-text {
   font-size: 1.6rem;
   line-height: 1.6;
-  color: #6F6F6F;
+  color: #6f6f6f;
 }
 
-.plan-sign-up{
+.plan-sign-up {
   text-align: center;
   margin-top: 4.8rem;
 }
