--- a/css/general.css
+++ b/css/general.css
@@ -19,6 +19,7 @@
     - tints :
             #fdf2e9
             #fae5d3
+            #eb984e
     - shades :#cf711f
     - accents : #51cf66
     - grays : #555, #333, #6F6F6F
