--- a/css/styles.css
+++ b/css/styles.css
@@ -426,7 +426,7 @@
   margin-top: 4.8rem;
 }
 
-.plan-details{
+.plan-details {
   font-size: 1.6rem;
   line-height: 1.6;
   text-align: center;
@@ -462,42 +462,74 @@
   padding: 9.6rem 0;
 }
 
-.cta{
+.cta {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  background-image: linear-gradient(to right bottom,#eb984e, #e67e22);
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
   overflow: hidden;
 
-  /* tepm */
-  height: 50rem;
 }
 
-.cta-text-box{ 
+.cta-text-box {
   padding: 6.4rem;
   padding-top: 4.8rem;
   color: #45260a;
 }
-.cta-text-box .heading-secondery{ 
-  color: #45260a;
+.cta-text-box .heading-secondery {
+  color: inherit;
   margin-bottom: 3.2rem;
 }
 
-.cta-text{
+.cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
   margin-bottom: 4.8rem;
 }
-.cta-img-box{
-  background-image: linear-gradient(to right bottom,rgba(235, 151, 78, 0.35), rgba(230, 125, 34, 0.35)),url("../img//eating.jpg");
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url("../img//eating.jpg");
   background-size: cover;
   background-position: center;
 }
 
-.cta-form{
+.cta-form {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 3.2rem;
   row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6em;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fae5d3;
+  border-radius: 9px;
+  box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus{
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(250, 229, 211, 0.5);
 }
