--- a/css/general.css
+++ b/css/general.css
@@ -20,9 +20,15 @@
             #fdf2e9
             #fae5d3
             #eb984e
-    - shades :#cf711f
+    - shades :
+            #cf711f
+            #45260a
     - accents : #51cf66
-    - grays : #555, #333, #6F6F6F
+    - grays : 
+            #555
+            #333
+            #6F6F6F
+            #aaa
 
 --- 05 SHADOWS
 --- 06 LETTER SPACING: -0.5px, 0.75px
@@ -131,6 +137,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -140,6 +147,10 @@ body {
   border-radius: 9px;
   font-weight: 600;
   transition: all 0.3s ease-in-out;
+
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--fill:link,
@@ -166,6 +177,18 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.btn--form{
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover{
+  background-color: #fff;
+  color: #555;
+}
+
 .link:visited,
 .link:link {
   color: #e67e22;
@@ -178,7 +201,10 @@ body {
   color: #cf711f;
   border-bottom: 1px solid transparent;
 }
-
+*:focus{
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
 .list {
   list-style: none;
   display: flex;
