--- a/css/styles.css
+++ b/css/styles.css
@@ -533,3 +533,11 @@
   outline: none;
   box-shadow: 0 0 0 0.8rem rgba(250, 229, 211, 0.5);
 }
+
+/************************/
+/* FOOTER */
+/************************/
+
+.footer {
+  padding: 9.6rem 0;
+}
