--- a/css/general.css
+++ b/css/general.css
@@ -24,7 +24,9 @@
             #cf711f
             #45260a
     - accents : #51cf66
-    - grays : 
+    - grays :
+            #888
+            #767676 
             #555
             #333
             #6F6F6F
