--- a/css/queries.css
+++ b/css/queries.css
@@ -6,7 +6,7 @@
     max-width: 120rem;
   }
 
-  .heading-primary{
+  .heading-primary {
     font-size: 4.4rem;
   }
 
@@ -18,38 +18,99 @@
 /************************/
 /* BELOW 1200PX (landscape tablets) */
 /************************/
-@media (max-width:75em){
-    html{
-        font-size: 56.25%;
-    }
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
 
-    .grid{
-        column-gap: 4.8;
-        row-gap: 6.4rem;
-    }
-    .heading-secondery{
-        font-size: 3.6rem;
-    }
+  .grid {
+    column-gap: 4.8;
+    row-gap: 6.4rem;
+  }
+  .heading-secondery {
+    font-size: 3.6rem;
+  }
 
-    .heading-tertairy{
-        font-size: 2.4rem;
-    }
+  .heading-tertairy {
+    font-size: 2.4rem;
+  }
 
-    .header{
-        padding: 0 3.2rem;
-    }
+  .header {
+    padding: 0 3.2rem;
+  }
 
-    .hero{
-        gap: 4.8rem;
-    }
+  .hero {
+    gap: 4.8rem;
+  }
 
-    .main-nav-list{
-        gap: 3.2rem;
-    }
+  .main-nav-list {
+    gap: 3.2rem;
+  }
 
-    .testamonials-container {
-        padding: 9.6rem 3.2rem;
-      }
+  .testamonials-container {
+    padding: 9.6rem 3.2rem;
+  }
+}
+/************************/
+/* BELOW 944PX (tablets) */
+/************************/
+
+@media (max-width: 59em) {
+  html {
+    font-size: 50%;
+  }
+
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 0 8rem;
+    gap: 6.4rem;
+  }
+
+  .hero-img {
+    width: 50%;
+  }
+
+  .hero-text-box,
+  .hero-img-box {
+    text-align: center;
+  }
+
+  .delivered-meals{
+    justify-content: center;
+    margin-top: 3.2rem;
+  }
+  .logos img{
+    height: 2.4rem;
+
+  }
+
+  .step-number{
+    font-size: 7.4rem;
+  }
+  .meal-content {
+    padding: 2.4rem;
+    padding-top: 3.2rem;
+  }
+
+  .section-testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery{
+    grid-template-columns: repeat(6,1fr);
+  }
+
+  .cta{
+    grid-template-columns: 3fr 2fr;
+  }
+
+  .cta-form{
+    grid-template-columns: 1fr;
+  }
+
+  .btn-form{
+    margin-top: 1.2rem;
+  }
 }
 
 /*
