--- a/css/general.css
+++ b/css/general.css
@@ -59,6 +59,7 @@ html {
       default : 1rem = 16px
       we set font size of the root element (HTML) to 10px then 1rem = 10px
       */
+  overflow-x: hidden;
 }
 
 body {
@@ -66,6 +67,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* works only nothing possitioned absolute relative to body */
+  overflow-x: hidden;
 }
 
 /*********************************/
