--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
+  position: relative;
 
   /* to make sticky later */
   height: 9.6rem;
@@ -53,6 +54,24 @@
 .main-nav-link.nav-cta:active,
 .main-nav-link.nav-cta:hover {
   background-color: #cf711f;
+}
+
+/* MOBILE */
+.btn-mobile-nav{
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav{
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"]{
+  display: none;
 }
 
 /************************/
