responsive to small tablets

--- a/css/queries.css
+++ b/css/queries.css
@@ -126,7 +126,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all .5s ease-in;
+    transition: all 0.5s ease-in;
     transform: translateX(100%);
 
     /* Hidding */
@@ -143,18 +143,18 @@
     visibility: hidden;
   }
 
-  .nav-open .main-nav{
+  .nav-open .main-nav {
     opacity: 100%;
     pointer-events: auto;
     visibility: visible;
     transform: translateX(0);
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"]{
+  .nav-open .icon-mobile-nav[name="close-outline"] {
     display: block;
   }
 
-  .nav-open .icon-mobile-nav[name="menu-outline"]{
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
     display: none;
   }
 
@@ -166,6 +166,42 @@
   .main-nav-link:link,
   .main-nav-link:visited {
     font-size: 3rem;
+  }
+}
+
+/************************/
+/* BELOW 704PX (small-tablets) */
+/************************/
+
+@media (max-width: 44em) {
+  .grid--3-cols, .grid--4-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets{
+    grid-column: 1/-1;
+    justify-self: center;
+  }
+
+  .heading-secondery{
+    margin-bottom: 4.8rem;
+  }
+  .pricing-plan{
+    width: 100%;
+  }
+
+  .grid--footer{
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .logo-col, .address-col{
+    grid-column: span 3;
+  }
+
+  .nav-col{
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
   }
 }
 
